# mass

./: .gitignore  .prettierrc.toml  .rustfmt.toml  Cargo.toml  LICENSE.md  Maidfile.toml  REPO_MCP_TOOLS.md  biome.json  runtime.d.ts  test_mcp_system.js  test_resources.js  tsconfig.json
.maid/archive/platform/: drizzle.config.ts  package.json  tsconfig.json
.maid/archive/platform/drizzle/: 0000_orange_skrulls.sql
.maid/archive/platform/schema/: auth.ts
.maid/archive/platform/src/: auth.ts  drizzle.ts  env.ts  routes.ts
.maid/archive/static/: .gitignore  biome.json  globals.d.ts  index.html  knip.json  package.json  t.node.json  t.web.json  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml
.maid/archive/static/src/: entry.tsx
app/: .gitignore  biome.json  drizzle.config.ts  next.config.ts  package.json  tsconfig.json
app/drizzle/: 0000_complex_sumo.sql
app/drizzle/meta/: 0000_snapshot.json  _journal.json
app/src/: globals.ts
app/src/actions/: get-project.ts  get-session.ts  get-theme.ts  list-projects.ts  project-runtime.ts  save-theme.ts  update-project.ts
app/src/app/: layout.tsx  not-found.tsx
app/src/app/(forms)/: layout.tsx
app/src/app/(pages)/: page.tsx
app/src/assets/styles/: tailwind.css  theme.css
app/src/hooks/: get-cookie.ts  use-theme.ts
app/src/service/: env.ts  fonts.ts  utils.ts
app/src/service/auth/: client.ts  index.ts
app/src/service/db/: index.ts
app/src/units/elements/: breadcrumbs.tsx  mass-logo.tsx  nav-menu.tsx  stacked-layout.tsx  tab-menu.tsx  theme-changer.tsx  user-sidebar.tsx
llm/: .env.example  FINAL_SUMMARY.md  README_TESTING.md  agent.py  demo.py  intelligent_agent.py  main.py  pyproject.toml  run_tests.sh  sample_test_data.json  setup.py  simple_test.py  test_agent.py  test_main.py  test_mcp_generation.py  test_openai_config.py
llm/mcp_server_template/: README.md  package.json  server.js
mass/: main.rs  modules.rs  snapshot.rs  stardust.rs
mass/docker/: orchestrator.js
mass/loader/: cache.rs  mod.rs
mass/runtime/: entry.js
mass/server/: index.ts  pkg.toml
mass/worker/: check.js  index.js  index.min.js  stdio.js
(+48 files in other folders)
