[package]
name = "mass"
version = "0.0.1"
edition = "2024"
license = "MIT"

build = "build/entry.rs"
repository = "https://github.com/themackabu/mass"

[[bin]]
name = "mass"
path = "mass/main.rs"

# [profile.release]
# lto = true
# strip = true
# opt-level = 3
# codegen-units = 1

# [profile.release]
# codegen-units = 1
# incremental = true
# lto = true
# opt-level = 'z'
# split-debuginfo = "packed"
# debug = "line-tables-only"

[dependencies]
data-url = "0.3.1"
deno_fs = "0.124.0"
reqwest = "0.12.23"
deno_error = "0.7.0"
thiserror = "2.0.16"
sys_traits = "0.1.17"
deno_core = "0.355.0"
deno_resolver = "0.45.0"

tokio = { version = "1.47.1", features = ["full"] }
deno_runtime = { version = "0.222.0", features = ["transpile", "snapshot"] }
url = "2.5.7"
sha2 = "0.10.9"
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
flate2 = "1.1.2"
tar = "0.4.44"

[build-dependencies]
esbuild_client = "0.7.1"
flate2 = "1.1.2"
futures = "0.3.31"
reqwest = { version = "0.12.23", features = ["blocking", "gzip", "json"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tar = "0.4.44"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
deno_core = { version = "0.355.0", features = ["include_js_files_for_snapshotting"] }

deno_runtime = { version = "0.222.0", features = [
  "include_js_files_for_snapshotting",
  "only_snapshotted_js_sources",
  "snapshot",
] }
deno_error = "0.7.0"
