[project]
name = "llm"
version = "0.1.0"
description = "LLM Agent for MCP tool generation and codebase analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pathspec>=0.12.0",
    "tiktoken>=0.5.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.26.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
